--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 
+	<link rel="stylesheet" href="vendors/css/jquery.mCustomScrollbar.css">
+
 
 	<script type="text/javascript" src="vendors/js/jquery.js"></script>
 
 	<script type="text/javascript" src="slick/slick.js"></script>
+
+	<script src="vendors/js/jquery.mCustomScrollbar.concat.min.js"></script>
 
 
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
@@ -419,6 +423,20 @@
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBoGWEyUlxHOSfMgm2TliQLggP3mej7d_I&callback=initMap"></script>
 		<script src="vendors/js/jquery.easing.1.3.js"></script>
 		<script src="vendors/js/jquery.parallax-scroll.js"></script>
+
+		<script>
+
+		(function($){
+
+				$(window).on("load",function(){
+					
+					$(".scroll").mCustomScrollbar();
+
+				});
+
+			})(jQuery);
+
+		</script>
 	
 	</div>
 
