--- a/show_attractions.html
+++ b/show_attractions.html
@@ -46,7 +46,7 @@
 
 <body>
 
-<div class="wrapper main-page">
+<div class="wrapper">
 
 	<!-- Header -->
 
@@ -203,6 +203,7 @@
 	<!-- /Pop Up -->
 
 		<!-- Content -->
+
 
 			<div class="content">
 
@@ -954,7 +955,7 @@
 									
 									<li><a href="#" class="pagination-arrow prev"><i class="fa fa-caret-left" aria-hidden="true"></i></a></li>
 
-									<li><a href="#" class="pagination-link">1</a></li>
+									<li><a href="#" class="pagination-link active">1</a></li>
 									<li><a href="#" class="pagination-link">2</a></li>
 									<li><a href="#" class="pagination-link">3</a></li>
 									<li><a href="#" class="pagination-link">4</a></li>
@@ -993,6 +994,13 @@
 				</div>
 
 			</div>
+
+			<div class="show_attractions_bg wow fadeIn">
+
+				<div class="row"></div>
+
+			</div>
+
 		<!-- /Content -->
 
 		<!-- Footer -->
