--- a/show_attractions.html
+++ b/show_attractions.html
@@ -207,7 +207,7 @@
 
 			<div class="content">
 
-				<div class="three-cols-templ clearfix">
+				<div class="three-cols-templ show-attractions clearfix">
 
 					<div class="sidebar-left">
 						
