--- a/show_profile_popup_login.html
+++ b/show_profile_popup_login.html
@@ -583,7 +583,7 @@
 
 				$(window).on("load",function(){
 					
-					$(".scroll, .popup").mCustomScrollbar();
+					$(".scroll").mCustomScrollbar();
 
 				});
 
