--- a/show_profile_popup_registration.html
+++ b/show_profile_popup_registration.html
@@ -142,9 +142,9 @@
 
 					</div>
 
-				</div>
+				</div>				
 
-				<div class="popup-login">
+				<div class="popup-login scroll">
 					
 					<h3>Зарегистрироваться через:</h3>
 
@@ -237,7 +237,7 @@
 
 					</div>
 
-				</div>
+				</div>				
 
 			</div>
 
@@ -556,7 +556,7 @@
 
 				$(window).on("load",function(){
 					
-					$(".scroll, .popup").mCustomScrollbar();
+					$(".scroll").mCustomScrollbar();
 
 				});
 
