--- a/show_add_page_1.html
+++ b/show_add_page_1.html
@@ -24,12 +24,16 @@
 
 	<link rel="stylesheet" href="vendors/css/jquery.mCustomScrollbar.css">
 
+	<link rel="stylesheet" href="vendors/css/sumoselect.css">
+
 
 	<script type="text/javascript" src="vendors/js/jquery.js"></script>
 
 	<script type="text/javascript" src="slick/slick.js"></script>
 
 	<script src="vendors/js/jquery.mCustomScrollbar.concat.min.js"></script>
+
+	<script src="vendors/js/jquery.sumoselect.js"></script>
 
 
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
@@ -259,7 +263,7 @@
 
 										<select>
 											
-											<option></option>
+											<option>Значение 1</option>
 											<option>Значение 2</option>
 											<option>Значение 3</option>
 											<option>Значение 4</option>
@@ -412,7 +416,7 @@
 
 		<script>
 
-		(function($){
+			(function($){
 
 				$(window).on("load",function(){
 					
@@ -421,6 +425,8 @@
 				});
 
 			})(jQuery);
+
+			$("select").SumoSelect();
 
 		</script>
 	
