--- a/show_profile_popup_registration.html
+++ b/show_profile_popup_registration.html
@@ -25,12 +25,16 @@
 
 	<link rel="stylesheet" href="vendors/css/jquery.mCustomScrollbar.css">
 
+	<link rel="stylesheet" href="vendors/css/sumoselect.css">
+
 
 	<script type="text/javascript" src="vendors/js/jquery.js"></script>
 
 	<script type="text/javascript" src="slick/slick.js"></script>
 
 	<script src="vendors/js/jquery.mCustomScrollbar.concat.min.js"></script>
+
+	<script src="vendors/js/jquery.sumoselect.js"></script>
 
 
 	<script type="text/javascript" src="vendors/js/wow.min.js"></script>
@@ -552,7 +556,7 @@
 
 		<script>
 
-		(function($){
+			(function($){
 
 				$(window).on("load",function(){
 					
@@ -561,6 +565,8 @@
 				});
 
 			})(jQuery);
+
+			$("select").SumoSelect();
 
 		</script>
 	
