--- a/show_attractions_info.html
+++ b/show_attractions_info.html
@@ -979,7 +979,7 @@
 						
 						<h2>Вас может может заинтересовать</h2>
 
-						<div class="int-place-humbnails">
+						<div class="int-place-humbnails wow fadeIn animation-delay">
 
 							<div class="thumbnail-box">
 
