--- a/show_attractions_info.html
+++ b/show_attractions_info.html
@@ -8,8 +8,6 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-
 	<meta name="description" content="">
 
 	<link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
@@ -17,8 +15,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<link rel="stylesheet" type="text/css" href="font-awesome.css">
-
-	<!-- <link rel="stylesheet" type="text/css" href="responsive.css"> -->
 
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 
@@ -70,7 +66,7 @@
 
 				<div class="video-box" id="video-placeholder">
 					
-					<iframe width="560" height="315" src="" frameborder="0" allowfullscreen id="video-iframe"></iframe>
+					<iframe width="560" height="315" src="#" allowfullscreen id="video-iframe"></iframe>
 
 				</div>
 
