--- a/show_home_index.html
+++ b/show_home_index.html
@@ -8,8 +8,6 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-
 	<meta name="description" content="">
 
 	<link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
@@ -17,8 +15,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<link rel="stylesheet" type="text/css" href="font-awesome.css">
-
-	<!-- <link rel="stylesheet" type="text/css" href="responsive.css"> -->
 
 	<link rel="stylesheet" type="text/css" href="slick/slick.css">
 
@@ -994,7 +990,7 @@
 					
 					<div class="row">
 						
-						<h2>ТОП экскурсий</h2>
+						<h2>ТОП гидов</h2>
 
 						<p class="h2-desc">в команде <a href="#">showplace.club</a></p>
 
